Configurando as requisições da API

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
   border-radius: 25px;
   outline: none;
   background: transparent;
-  color: #fff;
+  color: red;
   box-shadow: 2px 0 5px #fff;
 }
 
